<resources>
    <string name="app_name">Retrofit</string>
    <string name="api_key">ApiKey</string>
    <string name="city">Город,страна</string>
    <string name="spb">Saint Petersburg,ru</string>
    <string name="get">Получить</string>
    <string name="temp">Температура</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>
    <string name="zero">0</string>
    <string name="key">29fb8d6056fe0f462c0731feda71d342</string>
</resources>
